fixing error admin, flippy bird

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,3 +83,12 @@
     font-feature-settings: "rlig" 1, "calt" 1;
   }
 }
+
+@layer components {
+  .card {
+    @apply shadow-md;
+  }
+  .dark .card {
+    @apply shadow-sm;
+  }
+}
